# gstvideorecognition

./: .gitignore  CMakeLists.txt  Makefile  README.md  gstvideorecognition.cpp  gstvideorecognition.h  imageClsTrt.cpp  imageClsTrt.h  process.cpp  process.h  tsnTrt.cpp  tsnTrt.h  videorecognitionTrt.cpp  videorecognitionTrt.h  x3dTrt.cpp  x3dTrt.h
models/: convert2trt.sh
